Variable and code added to check if assets are enabled - isOpcuaAssetEnabled - isHttpAssetEnabled - isMqttAssetEnabled

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,9 +20,9 @@ faaast:
     opcuaasset:
       enabled: true
       host: 'opc.tcp://jw-Mac.local:53530/OPCUA/SimulationServer'
-#    httpasset:
-#      enabled: false
-#      baseUrl: 'http://localhost'
-#    mqttasset:
-#      enabled: false
-#      serverUri: 'tcp://localhost'
+    httpasset:
+      enabled: false
+      baseUrl: 'http://localhost'
+    mqttasset:
+      enabled: false
+      serverUri: 'tcp://localhost'
